Fix user functions
